[package]
name = "sui-swap"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = "2.4.0"
tokio-tungstenite = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
log = "0.4.22"
pretty_env_logger = "0.5.0"
futures = "0.3.30"
futures-channel = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenv = "0.15.0"
bincode = "1.3.3"
chrono = "0.4"
